--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
      What is your favorite travel destination?
     <input name="destination" required="" size="81" type="text"/> 
     <br><br><br> 
-    Any recommendations (cool things to do, places to visit or restaurants to eat)? 
+    True or false - is Jordan amazing?? 
     <br><br> 
     <textarea cols="81" name="details" required="" rows="10">
     </textarea> 
@@ -29,6 +29,27 @@
     <br><br>
     <input name="submit" type="submit" value="submit"/>
 </form> 
-    <!--Placeholder for identify and track script -->
-</body> 
+<script type="text/javascript">
+      function identify(e){
+        e.preventDefault();
+        var form = e.target;
+        var email = form["email"].value;
+        var fullname = form["fullname"].value;
+        var destination = form["destination"].value;
+        var details = form["details"].value;
+        var user = {
+            email: email, 
+            name: fullname, 
+            destination: destination, 
+            details: details
+        };
+        analytics.identify(email, {
+            email: email, 
+            name: fullname
+        });
+        analytics.track('destination submitted', user, function() {
+            window.location.href = "";
+        });
+      }
+</script></body> 
 </html>
